--- a/typeahead.html
+++ b/typeahead.html
@@ -1,43 +1,34 @@
 <html>
-<head>
-            <!-- Jquery -->
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-            <!--full bootstrap js plugins-->
+            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
             <script type="text/javascript" src="<?php echo base_url(); ?>js/bootstrap.js"></script>
-			<!-- Latest compiled and minified bootswatch CSS, in the future it would be cool to have the user be able to select between day and night mode from their settings or something -->
-			<!--night mode--><!--<link rel="stylesheet" href="https://bootswatch.com/solar/bootstrap.min.css">-->
-            <!--day mode--><link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
-            <!--orange mode--><!--<link rel="stylesheet" href="https://bootswatch.com/united/bootstrap.min.css">-->
-            <!--Twitter Typeahead and Bloodhound-->
             <script type="text/javascript" src="<?php echo base_url(); ?>js/typeahead.bundle.js"></script>
 
-
-
+			<link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
 </head>
 <body>
-
-
-
-<div class="row">
-	<div class="col-md-12 text-center">
-		<br/>
-		<h1>Search Dynamic Autocomplete using Bootstrap Typeahead JS</h1>	
-			<input class="typeahead form-control" style="margin:0px auto;width:300px;" type="text">
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<br/>
+			<h1>Search Dynamic Autocomplete using Bootstrap Typeahead JS</h1>	
+				<input class="typeahead form-control" style="margin:0px auto;width:300px;" type="text">
+		</div>
 	</div>
-</div>
+	<script type="text/javascript">
+		$('input.typeahead').typeahead({
+		    source:  function (query, process) {
+	        return $.get('/search-equipment.php', { query: query }, function (data) {
+	        		console.log(data);
+	        		data = $.parseJSON(data);
+		            return process(data);
+		        });
+		    }
+		});
+	</script>
 
-<script type="text/javascript">
 
-	$('input.typeahead').typeahead({
-	    source:  function (query, process) {
-        return $.get('/search-equipment.php', { query: query }, function (data) {
-        		console.log(data);
-        		data = $.parseJSON(data);
-	            return process(data);
-	        });
-	    }
-	});
 
-</script>
+
+
+
 
 </body>
