Maybe this one is better

--- a/typeahead.html
+++ b/typeahead.html
@@ -1,7 +1,7 @@
 <html>
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-            <script type="text/javascript" src="<?php echo base_url(); ?>js/bootstrap.js"></script>
-            <script type="text/javascript" src="<?php echo base_url(); ?>js/typeahead.bundle.js"></script>
+            <script type="text/javascript" src="js/bootstrap.js"></script>
+            <script type="text/javascript" src="js/typeahead.bundle.js"></script>
 
 			<link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
 </head>
